@@ -24,6 +24,8 @@ public class ModuleImpl extends SimpleModule {
      */
     public ModuleImpl() {
         super(ModuleImpl.class.getPackage().getName());
+
+        addSerializer(JSONBean.class, new JSONBean.Serializer());
     }
 
     @Override
