@@ -1,3 +1,8 @@
+2017-09-09  Allen D. Ball  <ball@sol>
+
+	* Use ModuleImpl instead of annotations to register
+	JSONBean.Serializer.
+
 2017-09-04  Allen D. Ball  <ball@sol>
 
 	* src/main/java/ball/databind/ModuleImpl.java:
